Fixed Overflow
Resizing is now only allowed vertically. Before, it could be resized to go off the page.

--- a/site/public/css/admin-gradeable.css
+++ b/site/public/css/admin-gradeable.css
@@ -392,10 +392,13 @@ body::-webkit-scrollbar-track {
     min-height: 500px;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    overflow: auto;
+    resize: vertical;
 }
 
 #gradeable-config-edit-bar {
     display: none;
+    overflow: hidden;
 }
 
 .warning-banner {
